EPUB: Fix page switching when swipe starts on mobile Safari
Setting the --swipe-amount property on the body somehow resets the
scroll position. How?

--- a/src/dom/epub/stylesheets/_layout.scss
+++ b/src/dom/epub/stylesheets/_layout.scss
@@ -1,4 +1,4 @@
-.swipe-indicator-left, .swipe-indicator-right {
+.swipe-indicators {
 	display: none;
 }
 
